k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-api
  template:
    metadata:
      labels:
        app: task-api
    spec:
      containers:
        - name: task-api
          image: cedgarcia/task-manager-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  namespace: task-manager
spec:
  selector:
    app: task-api
  ports:
    - port: 4000
      targetPort: 4000
