k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-db
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-db
  template:
    metadata:
      labels:
        app: task-db
    spec:
      containers:
        - name: task-db
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: task-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: task-db-service
  namespace: task-manager
spec:
  selector:
    app: task-db
  ports:
    - port: 5432
      targetPort: 5432
