k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-frontend
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-frontend
  template:
    metadata:
      labels:
        app: task-frontend
    spec:
      containers:
        - name: task-frontend
          image: task-manager-frontend:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: task-frontend-service
  namespace: task-manager
spec:
  type: NodePort
  selector:
    app: task-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
